--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@
 }
 
 #services {
+  background-color: #ecf0f3;
   margin-top: 10vh;
 }
 
@@ -303,12 +304,24 @@
   font-size: 20px;
   color: #131313;
   padding-bottom: 2px;
-  text-shadow: 0px 0px 5px rgba(63, 107, 169, 0.5);
 }
 
 #services .title {
+  font-size: 34px;
+  font-weight: 600;
   color: #161616;
   margin: 5px 0;
-  text-shadow: 0px 0px 5px rgba(63, 107, 169, 0.5);
+}
+
+#services .btn-services {
+  color: white;
+  background-color: #7fc6a4;
+  border: 1px solid white;
+  padding: 5px 20px;
+  margin-top: 10px;
+}
+
+.elementor-shape-fill {
+  fill: white !important;
 }
 /*# sourceMappingURL=style.css.map */
